fix missing API version from routes url and missing auth haeder from swagger UI
